--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json|ts)\"",
     "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --list-different",
-    "validate": "npm-run-all --parallel check-format lint test build"
+    "validate": "npm-run-all --parallel check-format lint test build",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
@@ -26,10 +27,21 @@
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "husky": ">=6",
     "jest": "^27.5.1",
+    "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
+  },
+  "lint-staged": {
+    "*.+(js|ts|tsx)": [
+      "eslint"
+    ],
+    "**/*.+(js|json|ts|tsx)": [
+      "prettier --ignore-path .gitignore --write",
+      "jest --findRelatedTests"
+    ]
   }
 }
